--- a/sla/pom.xml
+++ b/sla/pom.xml
@@ -7,10 +7,10 @@
         <artifactId>oncallSLA</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>prober</artifactId>
+    <artifactId>sla</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>prober</name>
-    <description>prober</description>
+    <name>sla</name>
+    <description>sla</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -21,12 +21,21 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
